# kospes

./: .gitignore  Cargo.toml  README.md
src/: bot.rs  config.py  config.rs  main.py  main.rs  sirius.py  sirius.rs  task.rs  worker.rs
src/api/: auth.rs  courses.rs  event.rs  mod.rs  news.rs  sirius.rs
src/bot/: events.rs  mod.rs  news.rs
src/sirius/: auth.rs  mod.rs  model.rs
