[package]
name = "kospes"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8.8" }
dotenv = "0.15.0"
