[package]
name = "kospes"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
dotenv = "0.15.0"
reqwest = "0.11.23"
anyhow = "1.0"
